# SVDSS

./: .gitignore  .gitmodules  .main.cpp.swo  2  :no  CMakeLists.txt  LICENSE  Makefile  PingPong  PingPongchrom  README.md  Snakefile  aggregate.cpp  aggregator.cpp  aggregator.hpp  aligner.cpp  aligner.hpp  assembler.cpp  assembler.hpp  bam.cpp  bam.hpp  bed_utils.cpp  bed_utils.hpp  caller.cpp  caller.hpp  chromosomes.cpp  chromosomes.hpp  clipler.cpp  clipler.hpp  clipper.cpp  clipper.hpp  cluster.cpp  cluster.hpp  clusterer.cpp  clusterer.hpp  config.cpp  config.hpp  config.yaml  converter.cpp  converter.hpp  (+49 more)
.github/workflows/: c-cpp.yml
docs/: index.md
error_correction/: .gitignore  Makefile  README.md  bloomfilter.hpp  main.cpp
error_correction/scripts/: plot_fraglen_dist.py  plot_gaplen_dist.py  print_error_len.py  print_len_fastx.py
error_correction/test/: sample.fq  sample.k3.kmc_pre  sample.k3.kmc_suf  sample.k3.txt
example/: check_correctness.py  child.fq  child_specific.non_overlapping.fq  child_specific.overlapping.fq  father.fq  mother.fq
experiments/realdata/: .gitignore  README.md  Snakefile  config.yml  contigspre.sm  haplopre.sm  kmers.sm  kmerscontigs.sm  kmershaplo.sm  pp.sm  ppcontigs.sm  pphaplo.sm  unitigs.sm  unitigscontigs.sm  unitigshaplo.sm  utils.sm
experiments/realdata/scripts/: aggregate.cpp  analyze.py  check_2al_for_homo.py  clean_bbmap.py  extract_al_by_err.py  extract_fns.py  extract_subfq.py  filter.cpp  filter_removed.py  get_stats.sh  kmc2fa.cpp  plot.py  plot_paperimage.py  prplot.py  remove_bad_ambiguous.py  remove_missing_gt.py  sam2bed.py  split.cpp  split_fa.cpp  tag_vcf.py  vcf2uniquehaplobeds.py
experiments/realdata/scripts/unsnaked/: check_5times_al.py  check_overlapped.py  clean_minimap2.py  count_bed_cintersection.py  extract_subbed.py  extract_uncovered_variants.py  intersect_sams.py  prplot.py
experiments/simulation/: README.md
experiments/simulation/scripts/: convert_fasta_to_fastq.py  de_novo_variants.sh  edit.sh  find.sh  generate_plots.sh  index_parents.sh  intersect_solutions.sh  map_for_figure_11.sh  map_for_figure_7.sh  map_reads.sh  map_short_sequences.sh  map_solutions.sh  plot.py  recover_raw_reads.py  run.sh  search.sh  simulate_random.sh  solve.sh  stella.sh
experiments/simulation/simulator/: chromosomes.py  kmers.py  logger.py  map_reduce.py
holy/: README.md  holy-compile.sh
patches/: patch_ropebwt.sh
poa/: Makefile  cluster_svs.py  extend.py  main.cpp
poa/tmp/: Makefile  clipler.cpp  clipler.hpp  cluster_svs.py  main.cpp  sv.cpp  sv.hpp
realdata_exp/: README.md  Snakefile  config.yml
realdata_exp/scripts/: aggregate.cpp  analyze.py  bam2bed.py  compare_beds.py  compute_masked_percentage.py  compute_recall.py  extract_al_by_err.py  extract_subbam.py  extract_subsam.py  filter.cpp  plot.bkp.py  plot.py  sam2bed.py  vcf2haplobeds.py  vcf2uniquehaplobeds.py
scripts/: stella3.sh  validate_bam.sh
simulation_exp/: simlation.sh
simulation_exp/scripts/: convert_fasta_to_fastq.py  edit.sh  find.sh  generate_plots.sh  index_reference.sh  map_for_figure_7.sh  map_reads.sh  map_seq.sh  parse_solution.sh  plot.py  recover_raw_reads.py  search.sh  solve.sh
src/: counter.cpp  counter_sdsl.cpp
src/approach11/: .gitignore  Makefile  README.md  Snakefile  config.yaml  main.cpp
src/approach11/tests/: child_1.fq  child_2.fq  child_3.fq  mother.fq
src/cpp/: ;w  Makefile  analyze.py  counter.cpp  master_read.txt  search.cpp
src/cpp/csa/: counter.cpp  example.cpp  post_process.py  run.sh  search.cpp  suffixtree.h
src/cpp/fmd/: Makefile  father.fmd  luca.cpp  main.cpp
src/cpp/fmd/fermi/: fermi
src/cpp/stella/: :w  Makefile  aggregator.cpp  aggregator.hpp  bed_utils.cpp  bed_utils.hpp  chromosomes.cpp  chromosomes.hpp  config.cpp  config.hpp  counter.cpp  extractor.cpp  extractor.hpp  finder.cpp  finder.hpp  intersector.cpp  intersector.hpp  main.cpp  mapped.bed  scanner.cpp  shifter.cpp  stella
src/kmer_analysis/: Makefile  README.md  main.cpp
src/python/: __main__.py  chromosomes.py  config.py  counttable.py  debug.py  logger.py  map_reduce.py  processor.py
src/python/stella/: __main__.py  bed.py  bwt.py  chromosomes.py  config.py  counttable.py  debug.py  fmd.py  indexer.py  junction.py  logger.py  map_reduce.py  preprocessor.py  simulator.py  visualizer.py
tests/: Dockerfile-bin  Dockerfile-build  README.md  run-svdss.sh
venv3.6/include/: python3.6m
